Corregi un error ortografico

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <strong>1984</strong> Invented an Unix interface with Sun Microsystems.
                         </li>
                         <li>
-                            <strong>1994</strong> Created the original desing of Java.
+                            <strong>1994</strong> Created the original design of Java.
                         </li>
                         <li>
                             <strong>2007</strong> Made an Officer of the Order of Canada.
